--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fluttertoast: null
   image_picker: null
   intl_phone_field: ^3.2.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_lints: null
